<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="30dip"
    android:stretchColumns="1" >
    <TableRow>
        <TextView android:text="@string/idProfesor" />
        <EditText
            android:id="@+id/editIdProfesor"
            android:inputType="text"
            android:maxLength="10" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/nombreProfesor" />
        <EditText
            android:id="@+id/editNombreProfesor"
            android:inputType="text"
            android:maxLength="10" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/idUsuario" />
        <EditText
            android:id="@+id/editIdUsuario"
            android:inputType="text"
            android:maxLength="10" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/idAsignacionCarga" />
        <EditText
            android:id="@+id/editIdAsignacionCarga"
            android:inputType="number"
            android:maxLength="4" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/opciones" />
    </TableRow>
    <TableRow>
        <Button
            android:onClick="insertarProfesor"
            android:text="@string/insertar" />
        <Button
            android:onClick="limpiarTexto"
            android:text="@string/Limpiar" />
    </TableRow>
</TableLayout>

