<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="30dip"
    android:stretchColumns="1" >
    <TableRow>
        <TextView android:text="@string/idAsignacion"/>
        <EditText
            android:id="@+id/editIdAsignacion"
            android:inputType="number"
            android:maxLength="4" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/codLaboratorio" />
        <EditText
            android:id="@+id/editCodLaboratorio"
            android:inputType="text"
            android:maxLength="10" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/codigoAsignatura" />
        <EditText
            android:id="@+id/editCodAsignatura"
            android:inputType="text"
            android:maxLength="10" />
    </TableRow>

    <TableRow>
        <TextView android:text="@string/opciones" />
    </TableRow>

    <TableRow>
        <Button
            android:onClick="insertar"
            android:text="@string/insertar" />
        <Button
            android:onClick="limpiarTexto"
            android:text="@string/limpiar" />
    </TableRow>
</TableLayout>