<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dip"
    android:stretchColumns="1" >
    <TableRow>
        <TextView android:text="@string/idusuario" />
        <EditText
            android:id="@+id/editIdUsuario"
            android:inputType="text"
            android:maxLength="7" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/usuario" />
        <EditText
            android:id="@+id/editUsuario"
            android:inputType="text"
            android:maxLength="30" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/contrasena" />
        <EditText
            android:id="@+id/editcontrasena"
            android:inputType="text"
            android:maxLength="30" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/tipoUsuario" />
        <EditText
            android:id="@+id/editTipoUsu"
            android:inputType="text"
            android:maxLength="1" />
    </TableRow>
    <TableRow>
        <Button
            android:onClick="actualizarUsuario"
            android:text="@string/actualizar" />
    </TableRow>
    <TableRow>
        <Button
            android:onClick="limpiarTexto"
            android:text="@string/limpiar" />
    </TableRow>
</TableLayout>