<?xml version="1.0" encoding="utf-8"?>

<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="30dip"
    android:stretchColumns="1"
    tools:context="com.example.oscar.reservalab.UsuarioConsultarActivity">
    <TableRow>
        <TextView android:text="@string/idusuario"/>
        <EditText
            android:id="@+id/editIdUsuario"
            android:inputType="text"
            android:maxLength="2" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/usuario" />
        <EditText
            android:id="@+id/editUsuario"
            android:inputType="text"
            android:maxLength="10" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/contrasena" />
        <EditText
            android:id="@+id/editcontrasena"
            android:inputType="text"
            android:maxLength="8" />
    </TableRow>
    <TableRow>

        <TextView android:text="@string/tipoUsuario" />
        <EditText
            android:id="@+id/editTipoUsu"
            />

    </TableRow>



    <TableRow>
        <Button
            android:onClick="insertarUsuario"
            android:text="@string/insertar"
            tools:ignore="OnClick" />
        <Button
            android:onClick="limpiarTexto"
            android:text="@string/limpiar" />
    </TableRow>
</TableLayout>