<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dip"
    android:stretchColumns="1" >
    <TableRow>
        <TextView android:text="@string/codlaboratorio" />
        <EditText
            android:id="@+id/editCodLaboratorio"
            android:inputType="text"
            android:maxLength="6" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/idtipocomputo" />
        <EditText
            android:id="@+id/editTipoComputo"
            android:inputType="number"
            android:maxLength="1" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/plantalaboratorio" />
        <EditText
            android:id="@+id/editPlantaLaboratorio"
            android:inputType="number"
            android:maxLength="1" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/cantidadequiposlaboratorio" />
        <EditText
            android:id="@+id/editCantidadEquiposLaboratorio"
            android:inputType="number"
            android:maxLength="2" />
    </TableRow>
    <TableRow>
        <Button
            android:onClick="actualizarLaboratorio"
            android:text="@string/actualizar" />
    </TableRow>
    <TableRow>
        <Button
            android:onClick="limpiarTexto"
            android:text="@string/limpiar" />
    </TableRow>
</TableLayout>