<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dip"
    android:stretchColumns="1" >
    <TableRow>
        <TextView android:text="@string/iddia" />
        <EditText
            android:id="@+id/editIdDia"
            android:inputType="number"
            android:maxLength="2" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/nomdia" />
        <EditText
            android:id="@+id/editNomDia"
            android:inputType="text"
            android:maxLength="9" />
    </TableRow>
    <TableRow>
        <Button
            android:onClick="actualizarDia"
            android:text="@string/actualizar" />
    </TableRow>
    <TableRow>
        <Button
            android:onClick="limpiarTexto"
            android:text="@string/limpiar" />
    </TableRow>
</TableLayout>